Wrong Icon For BLEND file on File/Append #21618

Closed
opened 2010-03-15 18:42:09 +01:00 by Atomic · 3 comments

%%%Hi All,

I wanted to append something from another file and I was presented with a screen filled with folder icons. This is not very intuitive. While I can understand that a BLEND file can be thought of as a folder. It should have a different icon than the system folder. It is very hard to tell a BLEND file apart from a folder. Also I noticed that one of the icons for a BLEND file was actually using a BLEND icon. This seems like a bug. Shouldn't all the BLEND files appear with a BLEND icon?

I have attached a screen grab so you can see what I am experiencing.

Blender 27468
Intel DUO T9300 @ 2.5Ghz, Windows XP 64, 3Gb RAM, nVidia 9500M GS
%%%

%%%Hi All, I wanted to append something from another file and I was presented with a screen filled with folder icons. This is not very intuitive. While I can understand that a BLEND file can be thought of as a folder. It should have a different icon than the system folder. It is very hard to tell a BLEND file apart from a folder. Also I noticed that one of the icons for a BLEND file was actually using a BLEND icon. This seems like a bug. Shouldn't all the BLEND files appear with a BLEND icon? I have attached a screen grab so you can see what I am experiencing. Blender 27468 Intel DUO T9300 @ 2.5Ghz, Windows XP 64, 3Gb RAM, nVidia 9500M GS %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Fixed, rev. 27523
%%%

%%%Fixed, rev. 27523 %%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#21618
No description provided.